packages/components/src/theme/query-model.scss
.grid-panel__button-bar {
    display: flex;
}

.grid-panel__button-bar-left {
    flex: 1;
}

.button-bar__section {
    display: flex;
}

.button-bar__filter-search > *:not(:first-child),
.button-bar__section > *:not(:first-child) {
    margin-left: 12px;
}

.button-bar__filter-search {
    display: flex;
}

.grid-panel__info {
    min-height: 49px; /* Prevents grid from jumping when pages are loading */
    display: flex;
    border-top: solid 1px $gray-border-light;
    padding-top: 12px;
}

.pagination-info {
    line-height: 34px; /* The height of button bars */
    vertical-align: middle;
}
.grid-panel__info,
.grid-panel__grid {
    margin-top: 12px;
}
.export-menu-icon {
    margin-right: 0.5em;
}
.selection-status {
    margin-top: 5px;
}
.selection-status > span {
    margin-right: 8px;
}
.grid-panel__loading {
    margin-top: 5px;
    margin-right: 8px;
}

.grid-panel__col-header-icon {
    color: $brand-secondary;
    padding-left: 2px;
}
.grid-panel__menu-icon {
    width: 14px;
}
.grid-panel__menu-icon-spacer {
    padding-right: 14px;
}
.grid-panel__menu-icon,
.grid-panel__menu-icon-spacer {
    margin-right: 8px;
}
.grid-panel__menu-toggle {
    color: $light-gray;
    font-size: 12px;
}

.grid-panel__search-form {
    height: 34px;
    min-width: 85px;

    .input-group-addon {
        background-color: inherit;

        &:hover {
            cursor: pointer;
            background-color: $light-gray;
        }
    }
}

// This is actually the default value for Bootstrap, but we have to set it again here because we override the default
// value in the LKS themes.
.input-group.grid-panel__input-group {
    display: table;
}

.grid-panel__button {
    height: 34px;
}

.grid-panel__filter-status {
    .filter-status-value {
        display: inline-block;
        white-space: pre;
        max-width: 400px;
        overflow: hidden;
        text-overflow: ellipsis;
        cursor: pointer;
        line-height: 16px;
        margin-right: 8px;
        padding: 8px 8px 8px 32px;
        color: $grid-action-item-color;
        background-color: $grid-action-item-bg;
        border-radius: 2px;
        border: 1px solid $grid-action-item-border-color;

        i.read-lock {
            padding-right: 6px;
            vertical-align: middle;
        }

        i.symbol {
            color: $grid-action-item-color;
            width: 23px;
            height: 14px;
            margin-right: 8px;
            margin-left: -25px;
            border-right: solid 1px $grid-action-item-border-color;
        }

        &:hover,
        &:focus {
            background-color: $grid-action-item-hover-bg;
        }
        &:active {
            background-color: $grid-action-item-border-color;
        }

        &.is-disabled {
            background-color: $grid-action-item-disabled-bg;
            border: 1px solid $grid-action-item-disabled-border-color;
            color: $grid-action-item-disabled-color;

            i.symbol {
                color: $grid-action-item-disabled-color;
                border-color: $grid-action-item-disabled-border-color;
            }

            &:hover,
            &:focus {
                background-color: $grid-action-item-disabled-bg;
            }
            &:active {
                background-color: $grid-action-item-disabled-bg;
            }
        }
    }

    .remove-all-filters {
        display: inline-block;
        vertical-align: top;
        top: 0;
        padding-top: 8px;
        cursor: pointer;
    }
}

// Issue 45139: grid header menu is clipped by the bounding container instead of overflowing it
.grid-panel .grid-header-cell .dropdown-menu {
    position: fixed;
    top: auto;
    left: auto;
    right: auto;
}

.responsive-btn-group {
    margin-right: 10px;

    .responsive-menu, .responsive-menu button {
        border-color: transparent;

        &:hover {
            border-color: $border-color;
            background-color: transparent;
        }
    }
}

.grid-panel__checkbox {
    margin: 0 8px !important;
}

.grid-panel__grid .table-responsive thead th {
    // Cancel the padding set by .table-condensed, see padding on .grid-header-cell__body below.
    padding: 0;

    &#__selection__,
    .grid-header-cell__body {
        // re-add the padding to the .grid-header-cell__body, this makes it so the entire th area is clickable
        padding: $table-condensed-cell-padding;
    }
}

.table-responsive.table-responsive--max-height {
    max-height: 70vh;
}

/* Grid sticky/locked column headers on vertical scroll */
.grid-panel__grid .table-responsive,
.editable-grid__container .table-responsive {
    overflow-y: auto;

    thead {
        position: sticky;
        top: -1px;
        z-index: 2;

        th {
            background-color: $white;

            /* fix for weird FF behavior, described in https://stackoverflow.com/questions/7517127/ */
            background-clip: padding-box;
        }
    }
}

/* Grid sticky/locked left most column on horizontal scroll */
.grid-panel__grid.grid-panel__lock-left .table-responsive,
.editable-grid__container.grid-panel__lock-left .table-responsive {
    thead th:nth-child(1), tr td:nth-child(1) {
        position: sticky;
        z-index: 1;
        left: -1px;

        /* fix for weird FF behavior, described in https://stackoverflow.com/questions/7517127/ */
        background-clip: padding-box;
    }
}
.grid-panel__grid.grid-panel__lock-left-with-checkboxes .table-responsive,
.editable-grid__container.grid-panel__lock-left-with-checkboxes .table-responsive,
.editable-grid__container.grid-panel__lock-left-with-countcol .table-responsive {
    thead th:nth-child(2), tr td:nth-child(2) {
        position: sticky;
        z-index: 1;

        /* fix for weird FF behavior, described in https://stackoverflow.com/questions/7517127/ */
        background-clip: padding-box;
    }
}
.grid-panel__grid.grid-panel__lock-left-with-checkboxes .table-responsive {
    thead th:nth-child(2), tr td:nth-child(2) {
        left: 22px;
    }
}
.editable-grid__container.grid-panel__lock-left-with-checkboxes .table-responsive {
    thead th:nth-child(1), tr td:nth-child(1) {
        padding-left: 0;
        padding-right: 0;
    }

    thead th:nth-child(2), tr td:nth-child(2) {
        left: 28px;
    }
}
.editable-grid__container.grid-panel__lock-left-with-countcol .table-responsive {
    thead th:nth-child(2), tr td:nth-child(2) {
        left: 43px;
    }
}

.editable-grid__container.grid-panel__lock-left-with-checkboxes-and-countcol .table-responsive {
    thead th:nth-child(3), tr td:nth-child(3) {
        position: sticky;
        z-index: 1;
        left: 71px;

        /* fix for weird FF behavior, described in https://stackoverflow.com/questions/7517127/ */
        background-clip: padding-box;
    }
}

